fixed responsive desig issue with about cards on small devices

--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     margin-top: clamp(4rem, 10vh, 10rem);
+    margin-bottom: clamp(4rem, 10vh, 10rem);
     padding:0;
     flex-direction:column;
 
@@ -47,8 +48,10 @@
     gap:clamp(1rem, 3vw, 48px);
     
     flex-wrap:wrap;
+    width:60vw;
     max-width: 1500px;
     padding:0;
+    
 }
 
 
@@ -64,7 +67,7 @@
     flex-shrink: 1;
     flex-grow: 1;
     flex-basis: 300px;
-    max-width:300px;
+    max-width: calc(100% - 2rem);
 
 }
 
